# SummarizeAI

./: .gitpod.yml  LICENSE  build.sh  db.sqlite3  dump.rdb  manage.py  pyproject.toml  render.yaml  requirements.txt
SummarizeAI/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
api/: admin.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_remove_summary_space_remove_summary_user_and_more.py  0003_initial.py  0004_remove_summary_space_remove_summary_vectorstore.py  0005_remove_summary_user_and_more.py  0006_initial.py  0007_webpagesummary_vectorstore_and_more.py  0008_remove_webpagesummary_vectorstore_and_more.py  0009_alter_webpagesummary_created_at_and_more.py
dashboard/: admin.py  helper.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py  0002_alter_space_options.py
main/: urls.py  views.py
site/static/script/: barba.js  barba.umd.js  home.js  index.js
site/static/style/: index.css  index.css.map  index.scss
site/temp/: index.html
site/temp/allauth/layouts/: base.html
site/temp/dashboard/: dashboard.html  index.html  loading.html  summary.html
site/temp/dashboard/products/: summarize_document.html  summarize_webpage.html  summarize_youtube_video.html
site/temp/dashboard/summary/: webpage.html  youtube.html
site/temp/home/: home.html
site/temp/products/: products.html
site/temp/registration/: login.html
